[gd_scene load_steps=8 format=3 uid="uid://cx3nae2kf70ob"]

[ext_resource type="Script" uid="uid://bji6l7e8uuyya" path="res://assets/city_grid/builder.gd" id="1_l8yio"]
[ext_resource type="PackedScene" uid="uid://cgoq4m72cxwkd" path="res://assets/ui/hud/hud.tscn" id="2_nploa"]
[ext_resource type="MeshLibrary" uid="uid://c3o5n5wcf0a7g" path="res://assets/mesh_libraries/1x1.tres" id="3_l8yio"]
[ext_resource type="MeshLibrary" uid="uid://crs2dm52j7tf" path="res://assets/mesh_libraries/3x3.tres" id="4_0gnr7"]
[ext_resource type="PackedScene" uid="uid://l42ksnikgke3" path="res://assets/camera/camera.tscn" id="5_dt4dh"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5cipg"]
size = Vector3(20, 1, 20)

[sub_resource type="BoxMesh" id="BoxMesh_uwrpk"]
size = Vector3(2, 0.04, 2)

[node name="CityGrid" type="Node3D"]
script = ExtResource("1_l8yio")

[node name="HUD" parent="." instance=ExtResource("2_nploa")]

[node name="GridMap1x1" type="GridMap" parent="."]
mesh_library = ExtResource("3_l8yio")
cell_size = Vector3(1, 1, 1)
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="GridMap3x3" type="GridMap" parent="."]
mesh_library = ExtResource("4_0gnr7")
cell_size = Vector3(3, 3, 3)
metadata/_editor_floor_ = Vector3(0, 4, 0)

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
size = Vector3(20, 1, 20)

[node name="Ground" type="StaticBody3D" parent="CSGBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGBox3D/Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_5cipg")

[node name="Camera" parent="." instance=ExtResource("5_dt4dh")]
transform = Transform3D(1, 0, 0, 0, 0.8655887, 0.50075555, 0, -0.50075555, 0.8655887, 0, 1.7780347, 10.877937)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.3848505, 0)
light_energy = 6.113
omni_range = 24.367054

[node name="GhostMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.5, 1)
mesh = SubResource("BoxMesh_uwrpk")
